src/sass/vacation-request.scss
#vacation-request-main {
    #utility-bar {
        .tabs-wrapper {
            min-height: 37px;

            .classic-tabs {
                bottom: 0;
                position: absolute;
            }
        }
    }
    #mini-dashboard {    
        .card {
            height: auto;
        }

        .hours {
            line-height: 50px;
            min-width: 50px;
        }

        .hours-label,
        .fy-label {
            @media screen and (max-width: $breakpoint-lg) {
                font-size: 80%;
                line-height: 1.2;
            }
        }
    }

    .calendar-view-links {

        .btn.btn-link-secondary {
            border: 1px solid lightgray !important;
            font-size: 1rem;

            i {
                font-size: 1rem !important;
            }

            &.selected {
                background: $harris-hyperlink-blue;
                color: white !important;
            }
        }
    }

    #vacation-list-body {

        #vacation-request-list {
            th {
                border: none;
                color: $harris-grey;
                padding: 0 10px;
                vertical-align: bottom;
    
                &#dates-col {
                    width: 25%;
    
                    @media screen and (min-width: $breakpoint-md) {
                        width: 50%;;
                    }
                }
                &#status-col {
                    width: 33%;
    
                    @media screen and (min-width: $breakpoint-md) {
                        width: 15%;
                    }
                }
            }
        
            tr {
                cursor: pointer;
    
                th, td {
                    @media screen and (max-width: $breakpoint-xs) {
                        font-size: 80%;
                    }
                }
            }
        
            td {
                border: 1px solid lightgrey;
                padding: 10px;
                vertical-align: middle;
    
                .user-image {
                    @media screen and (min-width: $breakpoint-xs) {
                        display: inline-block;
                    }
    
                    img {
                        height: 40px;
                        width: 35px;
                    }
                }
    
    
                &.status {
                    border-right: 6px solid lightgrey !important;
    
                    &.approved {
                        border-right: 6px solid #6db444 !important;
                    }
                    &.approvalinprocess {
                        border-right: 6px solid $info !important;
                    }
                    &.submitted {
                        border-right: 6px solid #F99F3C !important;
                    }
                    &.cancelled {
                        border-right: 6px solid #616264 !important;
                    }
                    &.denied {
                        border-right: 6px solid $danger !important;
                    }
                }
    
            }
        }

    }

    #vacation-request-body {
        padding-bottom: 100px;

        #total-requested-hours {
            background: black;
            color: white;
            
            td {
                font-weight: bold !important;
            }
        }

        #request-edit {
            td {
                font-weight: 400;              

                input[type=number]::-webkit-inner-spin-button, 
                input[type=number]::-webkit-outer-spin-button { 
                    -webkit-appearance: none; 
                    margin: 0; 
                }
            }
        }

        .vrs-status-label {
            color: #616264; 
            display: inline-block;
            font-weight: bold;
            padding-top: 2px;
        }
    
        .vrs-status {
            line-height: .3;
            margin-top: -2px;
            padding: 8px 5px 8px 5px;
            text-transform: uppercase;
            height: 19px;
            vertical-align: middle;
        
            &.cancelled {
                background-color: #616264;
            }
            &.denied {
                background-color: $danger;
            }
            &.new {
                background-color: #2C5697;
            }
            &.submitted {
                background-color: $warning;
            }
            &.approvalinprocess {
                background-color: $info;
            }
            &.approved {
                background-color: #6db444;
            }
        }

        #cc-emails,
        #approval-queue {
            .btn {
                line-height: 1;

                .fa {
                    font-size: 1.25rem;
                }
            }

            .badge.text-danger {
                color: $danger !important;
            }
        }
    }
}

#overlap-list {
    tr {
        td, th {
            padding: .5rem .25rem;
        }

        td {
            vertical-align: middle;

            .user-icon {
                max-height: 25px;
            }

            .valign {

                @media screen and (min-width: $breakpoint-xs) {
                    position: absolute;
                    top: 50%;
                    transform: translate(0, -50%);
                }
            }
        }
    } 
}

#authorization-list {
    tr {
        &.ng-dirty {
            border-left: 4px solid $warning;
        }
        th {
            padding: .5rem;

            &#name-column {
                width: 35%;
            }
        }
        td {
            padding: 0 .5rem .5rem .5rem;
        }
    }
}

#employee-search-results-wrapper {
    min-height: 150px;
    overflow-y: auto;

    #employee-search-results {
        width: 100%;
    
        thead,tbody,tr,td,th {
            display:block;
        }
        
        tbody {
            height: 150px;
            overflow-y: auto;
            overflow-x: hidden;
            width: 100%;

            tr:first-child {
                td {
                    border-top: none;
                }
            }
        }
        

        tr {
            cursor: pointer;
            clear: both;

            &:after {
                content: ' ';
                display: block;
                visibility: hidden;
                clear: both;
            }
    
            td,
            th {
                float:left;
                font-size: .8rem;
                padding-top: .5rem;
                padding-bottom: .5rem;
            }

            th {
                font-size: .7rem;
            }
    
            &.active {
                background-color: lighten($success, 30%);
            }
        }
    }

}

.team-list {
    .list-group-item .list-group {
        margin: .5rem -1.25rem -.5rem;

        li {
            padding-left: 2rem;
            border-left: none;
            border-right: none;

            &:last-child {
                border-bottom: none;
            }

            .list-group {

                margin-left: -2rem;

                li {
                    padding-left: 3rem;

                    .list-group {

                        margin-left: -3rem;
        
                        li {
                            padding-left: 4rem;

                            .list-group {

                                margin-left: -4rem;
                
                                li {
                                    padding-left: 5rem;

                                    .list-group {

                                        margin-left: -5rem;
                        
                                        li {
                                            padding-left: 6rem;
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}

#approver-calendar {
    position: relative;

    #team-list {
        @media screen and (max-width: $breakpoint-md) {
            background: rgba(white, .9);
            display: none;
            min-height: 100%;
            position: absolute;
            right: 0;
            top: 0;
            width: 100%;
            z-index: 99;
        }

        #close-team-list {
            right: 0px;
            background: lightgray;
            position: absolute;
            top: 0;
        }
    }

    #team-list-bg {
        background: rgba(black, .6);
        height: 100%;
        left: 0;
        position: absolute;
        top: 0;
        width: 100%;
        z-index: 50;
    }
}

#vrs-messages {
    .vrs-single-message {
        &:nth-child(odd) {
            background-color: rgba(0,0,0, .05); 
        }

        &:hover {
            background-color: rgba(0,156,222,.2);
        }
    }

    #message-body {
        overflow-y: auto;
    }

    #message-display-container {
        max-height: 130px;
    }
}

